Fix: Remove FAISS, update structure, protect API keys

--- a/pearl-agent-backend/pearl_frontend.html
+++ b/pearl-agent-backend/pearl_frontend.html
@@ -552,7 +552,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>🎯 PEARL Agent</h1>
+            <h1>PEARL Agent</h1>
             <p>Your Agentic Career Mentor - Breaking Down Goals into Actions</p>
         </div>
 
