added vercel url

--- a/pearl_frontend.html
+++ b/pearl_frontend.html
@@ -707,7 +707,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:8000/agent';
+        const API_URL = 'https://pearl-dusky.vercel.app/agent';
         let currentSessionId = null;
         let currentSkill = null;
         let currentModule = null;
